# aoc25

./: new.py  pyproject.toml  template.py
01/: sol.py
02/: sol.py
03/: sol.py
04/: sol.py
05/: sol.py
06/: sol.py
07/: sol.py
08/: sol.py
09/: sol.py
